--- a/src/app/marketing1/qtnmlcl/qtnmlcl-edit/qtnmlcl-edit.component.html
+++ b/src/app/marketing1/qtnmlcl/qtnmlcl-edit/qtnmlcl-edit.component.html
@@ -271,7 +271,10 @@
 
 <div class="page-footer line-bottom">
   <button *ngIf="bAdd || bEdit" class="btn btn-sm btn-success" (click)="save()" [disabled]="mform.invalid">Save</button>
-  <app-fileupload [inputdata]="{mode:'add', id:id, parent_type: 'LCL'}"></app-fileupload>
+  <!-- <app-fileupload [inputdata]="{mode:'add', id:id, parent_type: 'LCL'}"></app-fileupload> -->
+  <app-fileupload
+    [inputdata]="{mode:'add', id:id, parent_type: 'LCL',
+    rec_files_count: mform.get('rec_files_count')?.value, rec_files_attached: mform.get('rec_files_attached')?.value}"></app-fileupload>
 </div>
 
 
