--- a/src/app/marketing1/qtnmfcl/qtnmfcl-edit/qtnmfcl-edit.component.html
+++ b/src/app/marketing1/qtnmfcl/qtnmfcl-edit/qtnmfcl-edit.component.html
@@ -212,7 +212,8 @@
 </form>
 <div class="page-footer line-bottom">
   <button *ngIf="bAdd || bEdit" class="btn btn-sm btn-success" (click)="save()" [disabled]="mform.invalid">Save</button>
-  <app-fileupload [inputdata]="{mode:'add', id:id, parent_type: 'FCL'}"></app-fileupload>
+  <app-fileupload [inputdata]="{mode:'add', id:id, parent_type: 'FCL',
+  rec_files_count: mform.get('rec_files_count')?.value, rec_files_attached: mform.get('rec_files_attached')?.value}"></app-fileupload>
 </div>
 
 <div *ngIf="showModel">
