--- a/src/app/airimport/airimport/airimport-edit/airimport-edit.component.html
+++ b/src/app/airimport/airimport/airimport-edit/airimport-edit.component.html
@@ -314,8 +314,7 @@
         <div class="row">
           <div class="col-sm-12">
             <div class="d-grid gap-1">
-              <button class="btn btn-success btn-sm">PRINT MAWB</button>
-              <button class="btn btn-success btn-sm">MANIFEST</button>
+               <button class="btn btn-success btn-sm">POD</button>
               <button class="btn btn-success btn-sm">AR & AP</button>
               <button class="btn btn-success btn-sm">PROFIT REPORT</button>
               <button class="btn btn-success btn-sm">SHIPMENT LABEL</button>
