--- a/src/app/otherop/otherop/otherop-edit/otherop-edit.component.html
+++ b/src/app/otherop/otherop/otherop-edit/otherop-edit.component.html
@@ -566,13 +566,12 @@
             <app-fileupload
               [inputdata]="{mode:'add', id:id, parent_type: 'OTHERS',
               rec_files_count: mform.get('rec_files_count')?.value, rec_files_attached: mform.get('rec_files_attached')?.value}"></app-fileupload>
-            <button class="btn btn-success btn-sm">ATTACHMENTS</button>
             <button class="btn btn-success btn-sm" type="button" routerLink="/common-shipment/followupEdit"
               [queryParams]="{id : 0 ,mode:'add', menuid:'FOLLOWUP', type:'FOLLOWUP', appid: appid, parent_id: mform.get('oth_id')?.value, parent_type:mform.get('oth_mode')?.value}">ADD
               TO FOLLOW UP</button>
-            <button class="btn btn-success btn-sm" routerLink="/common-shipment/memoEdit"
-              [queryParams]="{ id:0, parent_id: mform.get('oth_id')?.value,parent_type:'OTH-CNTR-MEMO', mode: 'add',menuid:'MEMO', type: 'MEMO', appid: appid }">INTERNAL
-              MEMO</button>
+            <app-memo 
+              [inputdata]="{id: 0,parent_id: mform.get('oth_id')?.value,parent_type: 'OTH-CNTR-MEMO',menuid: 'MEMO',type: 'MEMO',appid: appid,
+              rec_memo_count: mform.get('rec_memo_count')?.value,rec_memo_attached: mform.get('rec_memo_attached')?.value,mode: 'add',}"></app-memo>
             <button class="btn btn-success btn-sm">REQUEST FOR APPROVAL</button>
             <button *ngIf="bAdd || bEdit" class="btn btn-success btn-sm" (click)="save()"
               [disabled]="mform.invalid">SAVE</button>
