--- a/src/app/shared/fileupload/fileupload.component.html
+++ b/src/app/shared/fileupload/fileupload.component.html
@@ -1,8 +1,13 @@
-<div class="d-grid gap-1">
+<span *ngIf="isMemoType()" class="link" (click)="openAttachment()">
+  <i class="fa fa-paperclip"
+  [ngClass]="(!!data?.rec_files_count || data?.rec_files_attached === 'Y') ? 'text-danger' : ''"></i>
+</span>
+
+<div class="d-grid gap-1" *ngIf="!isMemoType()">
   <button class="btn btn-sm"
     [ngClass]="(!!data?.rec_files_count || data?.rec_files_attached === 'Y') ? 'btn-danger' : 'btn-success'"
     type="button" (click)="openAttachment()">
     ATTACHMENTS
-    <span *ngIf="!!data?.rec_files_count">({{ data?.rec_files_count}})</span>
+    <span *ngIf="!!data?.rec_files_count">({{ data?.rec_files_count }})</span>
   </button>
 </div>
