--- a/src/app/seaimport/seaimporth/seaimporth-edit/seaimporth-edit.component.html
+++ b/src/app/seaimport/seaimporth/seaimporth-edit/seaimporth-edit.component.html
@@ -1084,8 +1084,9 @@
             >DELIVERY ORDER</button>
             <button class="btn btn-success btn-sm">US CUSTOM HOLD</button>
             <button class="btn btn-success btn-sm">DEVAN/INSTRUCTIONS</button>
-            <button class="btn btn-success btn-sm" routerLink="/common-shipment/memoEdit"
-            [queryParams]="{ id:0, parent_id: mform.get('hbl_id')?.value,parent_type:'SEAIMP-SHIP-MEMO', mode: 'add',menuid:'MEMO', type: 'MEMO', appid: appid }">HOUSE INTERNAL MEMO</button>
+            <app-memo 
+              [inputdata]="{id: 0,parent_id: mform.get('hbl_id')?.value,parent_type: 'SEAIMP-SHIP-MEMO',menuid: 'MEMO',type: 'MEMO',appid: appid,
+              rec_memo_count: mform.get('rec_memo_count')?.value,rec_memo_attached: mform.get('rec_memo_attached')?.value,mode: 'add',}"></app-memo>
             <button class="btn btn-success btn-sm">RIDER PAGE</button>
             <button class="btn btn-success btn-sm">PRODUCTS</button>
             <button *ngIf="bAdd || bEdit"  class="btn btn-success btn-sm"(click)="save()"
