Updated and tested Remarks

--- a/src/app/marketing1/qtnmair/qtnmair-edit/qtnmair-edit.component.html
+++ b/src/app/marketing1/qtnmair/qtnmair-edit/qtnmair-edit.component.html
@@ -216,6 +216,9 @@
       </div>
     </div>
   </div>
+
+  <app-genremarkm-edit [inputdata]="{id:id, parent_type:mform.get('qtnm_type')?.value}"></app-genremarkm-edit>
+  
 </form>
 
 
