Memo changes completed

--- a/src/app/airimport/airimport/airimport-edit/airimport-edit.component.html
+++ b/src/app/airimport/airimport/airimport-edit/airimport-edit.component.html
@@ -328,9 +328,12 @@
               <button class="btn btn-success btn-sm" type="button" routerLink="/common-shipment/followupEdit"
                 [queryParams]="{id : 0 ,mode:'add', menuid:'FOLLOWUP', type:'FOLLOWUP', appid: appid, parent_id: mform.get('mbl_id')?.value, parent_type:mform.get('mbl_mode')?.value}">ADD
                 TO FOLLOW UP</button>
-              <button class="btn btn-success btn-sm" routerLink="/common-shipment/memoEdit"
+              <!-- <button class="btn btn-success btn-sm" routerLink="/common-shipment/memoEdit"
                 [queryParams]="{ id:0, parent_id: mform.get('mbl_id')?.value,parent_type:'AIRIMP-CNTR-MEMO', mode: 'add',menuid:'MEMO', type: 'MEMO', appid: appid}">INTERNAL
-                MEMO</button>
+                MEMO</button> -->
+              <app-memo 
+                [inputdata]="{id: 0,parent_id: mform.get('mbl_id')?.value,parent_type: 'AIRIMP-CNTR-MEMO',menuid: 'MEMO',type: 'MEMO',appid: appid,
+                rec_memo_count: mform.get('rec_memo_count')?.value,rec_memo_attached: mform.get('rec_memo_attached')?.value,mode: 'add',}"></app-memo>
               <button class="btn btn-success btn-sm">REQUEST FOR APPROVAL</button>
             </div>
           </div>
