--- a/src/app/airimport/airimport/airimport-edit/airimport-edit.component.html
+++ b/src/app/airimport/airimport/airimport-edit/airimport-edit.component.html
@@ -331,9 +331,9 @@
               <!-- <button class="btn btn-success btn-sm" routerLink="/common-shipment/memoEdit"
                 [queryParams]="{ id:0, parent_id: mform.get('mbl_id')?.value,parent_type:'AIRIMP-CNTR-MEMO', mode: 'add',menuid:'MEMO', type: 'MEMO', appid: appid}">INTERNAL
                 MEMO</button> -->
-              <app-memo 
-                [inputdata]="{id: 0,parent_id: mform.get('mbl_id')?.value,parent_type: 'AIRIMP-CNTR-MEMO',menuid: 'MEMO',type: 'MEMO',appid: appid,
-                rec_memo_count: mform.get('rec_memo_count')?.value,rec_memo_attached: mform.get('rec_memo_attached')?.value,mode: 'add',}"></app-memo>
+                <button class="btn btn-sm" [ngClass]="(mform.get('rec_memo_attached')?.value === 'Y') ? 'btn-danger' : 'btn-success'" 
+              routerLink="/common-shipment/memoEdit" [queryParams]="{ id:0, parent_id: mform.get('mbl_id')?.value,parent_type:'AIRIMP-CNTR-MEMO', mode: 'add',menuid:'MEMO', type: 'MEMO', appid: appid}">INTERNAL MEMO
+              <span *ngIf="!!mform.get('rec_memo_count')?.value">({{ mform.get('rec_memo_count')?.value }})</span> </button>
               <button class="btn btn-success btn-sm">REQUEST FOR APPROVAL</button>
             </div>
           </div>
