--- a/src/app/master/param/param-search/param-search.component.html
+++ b/src/app/master/param/param-search/param-search.component.html
@@ -14,7 +14,10 @@
     <div class="col-sm-6">
       <div class="form-group row">
         <div class="col-sm-12">
-          <button class="btn btn-sm btn-success" (click)="search('search')">Search</button>
+          <button class="btn btn-sm btn-success me-1" (click)="search('SEARCH')">Search</button>
+          <button class="btn btn-sm btn-success me-1" (click)="search('PRINT')">Print</button>
+          <button class="btn btn-sm btn-success me-1" *ngIf="showModel" (click)="search('PDF')">PDF</button>
+          <button class="btn btn-sm btn-success" *ngIf="showModel" (click)="search('EXCEL')">Excel</button>
         </div>
       </div>
     </div>
